# aetherstream

./: .eslintignore  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  obs-overlay.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: rename-installers.mjs
src/: App.jsx  aether-legacy.css  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/layout/: Sidebar.jsx  TitleBar.jsx
src/components/overlays/: AppOverlays.jsx
src/components/sections/: Sections.jsx
src/i18n/: translations.js
src/services/: tauriApi.js  ttsQueue.js  twitchBot.js  vtsClient.js
