[package]
name = "aetherstream"
version = "0.2.0"
description = "AetherStream"
autobins = false
authors = ["Daikh"]
license = "PolyForm-Noncommercial-1.0.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "AetherStream"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
tiny_http = "0.12"
url = "2.5"
webbrowser = "1.0"
base64 = "0.22"
rodio = "0.19"
